internal/kgateway/translator/gateway/testutils/outputs/listener-sets/accepted-ls-rejected-listener.yaml
Clusters:
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_default_foo-svc_8080
  type: EDS
- connectTimeout: 5s
  metadata: {}
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  name: listener~8080
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 9090
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~9090
        statPrefix: http
        useRemoteAddress: true
    name: listener~9090
  name: listener~9090
Routes:
- ignorePortInHostMatching: true
  name: listener~8080
- ignorePortInHostMatching: true
  name: listener~9090
  virtualHosts:
  - domains:
    - foo.example.com
    name: listener~9090~foo_example_com
    routes:
    - match:
        prefix: /
      name: listener~9090~foo_example_com-route-0-httproute-foo-route-default-0-0-matcher-0
      route:
        cluster: kube_default_foo-svc_8080
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
Statuses:
  gateways:
    default/example-gateway:
      conditions:
      - lastTransitionTime: null
        message: ""
        reason: ListenerSetsAttached
        status: "True"
        type: AttachedListenerSets
      - lastTransitionTime: null
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      listeners:
      - attachedRoutes: 0
        conditions:
        - lastTransitionTime: null
          message: No errors found
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: No errors found
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: No errors found
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: No errors found
          reason: Programmed
          status: "True"
          type: Programmed
        name: http-8080
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    default/foo-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: No errors found
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: No errors found
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: gateway.networking.x-k8s.io
          kind: XListenerSet
          name: foo-listenerset
  listenerSets:
    default/foo-listenerset:
      conditions:
      - lastTransitionTime: null
        message: No errors found
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: No errors found
        reason: Programmed
        status: "True"
        type: Programmed
      listeners:
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: No errors found
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: No errors found
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: No errors found
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: No errors found
          reason: Programmed
          status: "True"
          type: Programmed
        name: http-9090
        port: 9090
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
      - attachedRoutes: 0
        conditions:
        - lastTransitionTime: null
          message: Protocol UDP is unsupported.
          reason: UnsupportedProtocol
          status: "False"
          type: Accepted
        - lastTransitionTime: null
          message: No errors found
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: No errors found
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: No errors found
          reason: Programmed
          status: "True"
          type: Programmed
        name: udp-9091
        port: 9091
        supportedKinds: []
